changes done in deployed food app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://vyankatesh9604.github.io/react-project-2",
+  "homepage":"http://vyankatesh9604.github.io/foodrecipeproject",
   "name": "foodrecipe",
   "version": "0.1.0",
   "private": true,
